# DirectX12-HelloTriangle-in-C

./: .gitignore  CMakeLists.txt  README.md  barrier_helpers.c  barrier_helpers.h  core_helpers.c  core_helpers.h  macros.h  main.c  sample.c  sample.h  sample_commons.c  sample_commons.h  window.c  window.h
shaders/: shaders.hlsl
